# os-data-platform

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md
.github/scripts/: validate_config.py
.github/workflows/: libs-tests.yml  unit-tests.yml  validate-config.yml
configuration/ingestion/: natural_earth.yml  noaa-ghcn.yml  source1.yml  world-bank.yml
docs/superpowers/plans/: 2026-05-13-helm-orchestrator.md  2026-06-10-storage.md
docs/superpowers/specs/: 2026-05-13-helm-orchestrator-design.md  2026-06-10-storage-design.md  2026-07-03-climatology-dashboard-design.md
helm/: README.md
helm/ingestor/: values.yaml
helm/mcp/: Chart.yaml  values.yaml
helm/mcp/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/metadata/: values.yaml
helm/operators/: Chart.yaml  values.yaml
helm/orchestrator/: values.yaml
helm/reporting/: Chart.yaml  values.yaml
helm/reporting/assets/: metadata.yaml
helm/reporting/scripts/: export_assets.sh
helm/reporting/templates/: assets-configmap.yaml
helm/semantic/: Chart.yaml  values.yaml
helm/semantic/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/storage/: Chart.yaml  bucket-init-job.yaml  values.yaml
helm/storage/templates/: bucket-job.yaml
helm/warehouse/: Chart.yaml  README.md  values.yaml
helm/warehouse/templates/: _helpers.tpl  clickhouse-cluster.yaml  keeper-cluster.yaml  lakehouse-config.yaml  s3-named-collection-config.yaml  warehouse-init-job.yaml
ingestor/: README.md  __main__.py  pulumi.dev.yml  pulumi.yml  pyproject.toml
ingestor/src/: main.py
ingestor/stack/: base.py  ingestion.py
libs/: README.md  pyproject.toml
libs/src/common/: config.py  models.py  user_config.py
libs/src/common/models/: core.py  ingestion.py  ingestion_s3.py
libs/tests/: test_config.py  test_ingestion_config.py  test_ingestion_s3.py
libs/tests/fixtures/ingestion/: example.yml
mcp/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp/src/app/: config.py  server.py
mcp/src/app/tools/semantic/: __init__.py  auth.py  client.py  models.py  register.py  service.py
mcp/src/mcp_server/: config.py  cube.py  schema.py  server.py  service.py
mcp/tests/: test_config.py  test_cube.py  test_integration.py  test_jwt.py  test_schema.py  test_server.py  test_service.py
mcp/tests/semantic/: test_auth.py  test_client.py  test_integration.py  test_schema.py  test_service.py
nifi/: ingest_weather.py
nifi/connect/: Dockerfile  weather-sink.json
orchestrator/: .env  Dockerfile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
orchestrator/src/: definitions.py
orchestrator/src/assets/: ingestion.py  ingestion_api.py  ingestion_s3.py  transform.py
orchestrator/src/common/: user_config.py
orchestrator/src/common/models/: core.py  ingestion.py  ingestion_api.py  ingestion_s3.py
orchestrator/src/resources/: lakehouse.py  warehouse.py
orchestrator/src/sql/common/: copy_table.sql  drop_table.sql  swap_partitions.sql  swap_tables.sql
orchestrator/src/sql/ingestion/: create_raw_table.sql  create_table_from_file.sql  insert_from_file.sql
orchestrator/tests/: helpers.py  test_ingestion_builder.py  test_ingestion_config.py  test_ingestion_s3_builder.py  test_ingestion_table.py  test_sql_templates.py  test_transform_translator.py  test_user_config.py
orchestrator/tests/fixtures/ingestion/: example.yml
reporting/scripts/: build_values_assets.sh  export-assets.sh  export_assets.sh
semantic/: .env  Dockerfile  README.md  cube.js  docker-compose.yml
transform/: .gitignore  README.md  config.yaml  dbt_project.yml  profiles.yml  pyproject.toml
transform/macros/: generate_schema_name.sql
transform/models/: sources.yml
transform/seeds/: properties.yml
transform/tests/: curated_station_year_unique.sql
(+58 files in other folders)
