[project]
name = "ingestor"
version = "0.1.0"
description = "Data Platform ingestor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-airbyte>=1.0.0,<2.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
]

[tool.uv.sources]
pulumi-airbyte = { path = "sdks/airbyte" }
common = { path = "../libs" }
