[project]
name = "common"
version = "0.1.0"
description = "Data Platform common"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.11.7",
    "croniter",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.pytest.ini_options]
addopts = ["-s"]
minversion = "6.0"
pythonpath = ["src"]
testpaths = ["tests"]
log_cli = true
filterwarnings = ["ignore::Warning"]
