[project]
name = "orchestrator"
version = "0.1.0"
description = "Data Platform orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "dagster",
    "dagster-k8s",
    "dagster-aws",
    "dagster-postgres",
    "dagster-webserver",
    "dagster-clickhouse",
    "sqlparse",
]

[tool.uv.sources]
common = { path = "../libs" }
