[project]
name = "orchestrator"
version = "0.1.0"
description = "Data Platform orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "dagster==1.13.9",
    "dagster-k8s==0.29.9",
    "dagster-aws==0.29.9",
    "dagster-postgres==0.29.9",
    "dagster-webserver==1.13.9",
    "dagster-clickhouse==0.29.9",
    "dagster-sqlmesh==0.22.0",
    "psycopg2-binary>=2.9.12",
    "sqlmesh[clickhouse]>=0.235.4",
    "sqlparse==0.5.5",
]

[tool.uv.sources]
common = { path = "../libs" }
