[project]
name = "orchestrator"
version = "0.1.0"
description = "Data Platform orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "dagster==1.13.9",
    "dagster-k8s==0.29.9",
    "dagster-aws==0.29.9",
    "dagster-postgres==0.29.9",
    "dagster-webserver==1.13.9",
    "dagster-clickhouse==0.29.9",
    "dagster-dbt==0.29.9",
    "dbt-core==1.9.4",
    "dbt-clickhouse==1.9.2",
    "dlt[clickhouse]",
    "psycopg2-binary==2.9.12",
    "sqlparse==0.5.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.uv.sources]
common = { path = "../libs" }

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
filterwarnings = ["ignore::Warning"]
